Going back to double scroll, as using a fixed position for the video prevents scrolling in case there is a lot of text :)

--- a/yo/app/styles/video.css
+++ b/yo/app/styles/video.css
@@ -121,7 +121,7 @@
 }
 
 .video-information {
-	position: fixed;
+	/*position: fixed;*/
 }
 
 .video-information .show-x {
